tests/resources/valid/class/parent.mamba
type MyType
    def fun_a(self)
    def factorial(self, x: Int) -> Int

class MyClass1: MyType("asdf")
    def other: Int
