tests/resources/invalid/function/assign_type_to_self.mamba
class Something
    def +(self:Something, other: Int): Int => a + b
